samples/_failures_safe/1761511477_fd24f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee596514.c: In function ‘main’:
./samples/SAFE/__tmp_ee596514.c:152:12: error: missing terminating " character
  152 |     printf("Testing edge cases
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee596514.c:152:5: error: expected expression at end of input
  152 |     printf("Testing edge cases
      |     ^~~~~~
./samples/SAFE/__tmp_ee596514.c:152:5: error: expected declaration or statement at end of input
